Add more columsn to action library